--- a/foo/dune-project
+++ b/foo/dune-project
@@ -19,6 +19,7 @@
  (name foo)
  (synopsis "A short synopsis")
  (description "A longer description")
+ (allow_empty)
  (depends ocaml dune bar)
  (tags
   (topics "to describe" your project)))
